# ex4

./: ASearcher.h  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  Boot.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  InputSteam.h  MatrixProblem.h  MatrixSearchable.cpp  MatrixSearchable.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.h  OutputStream.h  Point.cpp  Point.h  Problem.h  Searchable.h  Searcher.h  ServerSide.h  Solution.h  Solver.h  Stack.h  State.cpp  State.h  StateComperator.h  (+5 more)
